--- a/Blazm.Components/SampleServerSide/Pages/GridDataColumnNoRows.razor
+++ b/Blazm.Components/SampleServerSide/Pages/GridDataColumnNoRows.razor
@@ -1,6 +1,6 @@
 ﻿@page "/griddatacolumnnorows"
 @using Blazm.Components
-@using SampleServerSide.Data
+@using BlazmWebAssemblyDemo.Data
 @inject WeatherForecastService ForecastService
 
 <style>
