--- a/Blazm.Components/SampleServerSide/Pages/Simple.razor
+++ b/Blazm.Components/SampleServerSide/Pages/Simple.razor
@@ -1,23 +1,14 @@
-﻿@page "/fetchdata"
-@page "/sub/fetchdata"
+﻿@page "/simple"
+
 @using Blazm.Components
-@using SampleServerSide.Data
+@using BlazmWebAssemblyDemo.Data
 @inject WeatherForecastService ForecastService
 
-<style>
-    th,td {
-        white-space: nowrap;
-    }
-</style>
+<h1>Simple demo</h1>
 
-<h1>Weather forecast</h1>
+<p>This is a simple grid demo with paging</p>
 
-<p>This component demonstrates fetching data from a service.</p>
-
-
-<h2>BlazmGrid</h2>
-
-<BlazmGrid UseVirtualize="false" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
+<BlazmGrid Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
     <GridColumns>
         <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
         <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
