--- a/Blazm.Components/SampleServerSide/Pages/_Host.cshtml
+++ b/Blazm.Components/SampleServerSide/Pages/_Host.cshtml
@@ -16,6 +16,12 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="_content/Blazm.Components/css/styles.min.css" rel="stylesheet" />
     <link href="css/fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+    <style type="text/css">
+        th,td {
+            white-space: nowrap;
+        }
+    </style>
+
 </head>
 <body>
     <app>
