--- a/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
+++ b/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
@@ -13,37 +13,42 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="simple">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Simple demo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="grouped">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Grouped demo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdatagrouped">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data grouped
+            <NavLink class="nav-link" href="details">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Details demo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="griddatacolumn">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Data Column
+            <NavLink class="nav-link" href="emptyornulltemplate">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Empty template demo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="gridduplicatecolumn">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Duplicate Column
+            <NavLink class="nav-link" href="select">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Select demo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdatanulltemplate">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Null template
+            <NavLink class="nav-link" href="export">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Excel Export Demo
             </NavLink>
         </li>
-                <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdatawithcustomload">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="filter">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Filter demo
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="customload">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Custom data load
             </NavLink>
         </li>
