--- a/Blazm.Components/SampleServerSide/Pages/FetchDataVirtualize.razor
+++ b/Blazm.Components/SampleServerSide/Pages/FetchDataVirtualize.razor
@@ -1,6 +1,6 @@
 ﻿@page "/virtualize"
 @using Blazm.Components
-@using SampleServerSide.Data
+@using BlazmWebAssemblyDemo.Data
 @inject WeatherForecastService ForecastService
 
 <style>
