Cleaned up sample project

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor.css
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor.css
@@ -1,5 +1,4 @@
-﻿
-::deep.hiddencell {
+﻿::deep.hiddencell {
     display: none;
 }
 
@@ -122,3 +121,4 @@
         transform: rotate(0deg);
     }
 }
+
