Fixed a spelling misstake

--- a/Blazm.Components/BlazmWebAssemblyDemo/Pages/Select.razor
+++ b/Blazm.Components/BlazmWebAssemblyDemo/Pages/Select.razor
@@ -6,7 +6,7 @@
 
 <h1>Select demo</h1>
 
-<p>TThis is a demo of the select feature</p>
+<p>This is a demo of the select feature</p>
 
 <BlazmGrid ShowCheckbox="true" SelectedDataChanged="@((List<WeatherForecast>list)=>OnSelectChanged(list))" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
     <GridColumns>
