Minor fixes in the filtering function. Filtering now works with null values and paging is disabled when filtering.

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -148,7 +148,7 @@
                 </tfoot>
             }
         </table>
-        @if (PageSize != 0 && (((Data?.Count())??0) > PageSize) && GroupBy == null)
+        @if (PageSize != 0 && !IsFiltered && (((Data?.Count())??0) > PageSize) && GroupBy == null)
         {
             <ul class="pagination">
                 <li class="page-item @(CurrentPage==0?"disabled":"cursor-pointer")"><a class="page-link" @onclick="PreviousPage">@PreviousText</a></li>
