Added td for details arrow and checkbox (so both can be used) Made the whole cell clickable for checking the box Made the row not expand if the checkbox is checked

--- a/Blazm.Components/Blazm.Components/Grid/GridDataRow.razor
+++ b/Blazm.Components/Blazm.Components/Grid/GridDataRow.razor
@@ -2,14 +2,14 @@
 @namespace Blazm.Components
 
 <CascadingValue Value="ContainerGrid">
-    <tr class="@(ContainerGrid.Columns.Any(c => !c.Visible) || ContainerGrid.DetailTemplate != null ? "expandable" : "") @(ContainerGrid.RowCss!=null?ContainerGrid.RowCss(Row):"")" @onclick="@(() => { if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode())) { ContainerGrid.ExpandedRows.Remove(Row.GetHashCode()); } else { ContainerGrid.ExpandedRows.Add(Row.GetHashCode()); } })">
+    <tr class="@(ContainerGrid.Columns.Any(c => !c.Visible) || ContainerGrid.DetailTemplate != null ? "expandable" : "") @(ContainerGrid.RowCss!=null?ContainerGrid.RowCss(Row):"")">
         @if (ContainerGrid.Columns.Any(c => !c.Visible) || ContainerGrid.ShowCheckbox || ContainerGrid.DetailTemplate != null)
         {
-            <td>
+            
                 @if (ContainerGrid.Columns.Any(c => !c.Visible) || ContainerGrid.DetailTemplate != null)
                 {
-
-                    if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode()))
+                    <td @onclick="@(() => { if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode())) { ContainerGrid.ExpandedRows.Remove(Row.GetHashCode()); } else { ContainerGrid.ExpandedRows.Add(Row.GetHashCode()); } })">
+                    @if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode()))
                     {
                         @ContainerGrid.ExpandedTemplate
                     }
@@ -17,12 +17,14 @@
                     {
                         @ContainerGrid.CollapsedTemplate
                     }
+                    </td>
                 }
                 @if (ContainerGrid.ShowCheckbox)
                 {
-                    <input type="checkbox" checked="@(ContainerGrid.IsItemSelected(Row))" @onchange="async eventArgs => { await ContainerGrid.SelectItemAsync(Row, eventArgs.Value); }" />
+                    <td @onclick="async eventArgs => { await ContainerGrid.SelectItemAsync(Row, !ContainerGrid.IsItemSelected(Row)); }">
+                        <input type="checkbox" checked="@(ContainerGrid.IsItemSelected(Row))" @onchange="async eventArgs => { await ContainerGrid.SelectItemAsync(Row, eventArgs.Value); }" />
+                    </td>
                 }
-            </td>
         }
         @foreach (var column in ContainerGrid.Columns)
         {
@@ -38,11 +40,11 @@
                 {
                     stringValue = string.Format(column.Format, TypeDescriptor.GetProperties(Row)[column.Field].GetValue(Row));
                 }
-                <td class="@column.Class  @ContainerGrid.GetSignClass(column, stringValue) @column.DataClass">@stringValue</td>
+                <td class="@column.Class @ContainerGrid.GetSignClass(column, stringValue) @column.DataClass" @onclick="@(() => { if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode())) { ContainerGrid.ExpandedRows.Remove(Row.GetHashCode()); } else { ContainerGrid.ExpandedRows.Add(Row.GetHashCode()); } })">@stringValue</td>
             }
             else
             {
-                <td class="@column.Class @column.DataClass">@column.Template(Row)</td>
+                <td class="@column.Class @column.DataClass" @onclick="@(() => { if (ContainerGrid.ExpandedRows.Contains(Row.GetHashCode())) { ContainerGrid.ExpandedRows.Remove(Row.GetHashCode()); } else { ContainerGrid.ExpandedRows.Add(Row.GetHashCode()); } })">@column.Template(Row)</td>
             }
         }
     </tr>
